--- a/.github/workflows/urlTOapk.yml
+++ b/.github/workflows/urlTOapk.yml
@@ -54,18 +54,17 @@ jobs:
 
       - name: Inject Professional Features & Security
         run: |
-          # ১. build.gradle কনফিগারেশন (Security & SwipeRefresh Library)
-          # এখানে সরাসরি ফাইল রাইট করা হচ্ছে যাতে ভুল না হয়
+          # ১. build.gradle কনফিগারেশন (SDK 35 আপডেট ও সিকিউরিটি)
           cat <<EOF > android/app/build.gradle
           apply plugin: 'com.android.application'
 
           android {
               namespace "${{ steps.meta.outputs.package }}"
-              compileSdk 34
+              compileSdk 35
               defaultConfig {
                   applicationId "${{ steps.meta.outputs.package }}"
                   minSdk 22
-                  targetSdk 34
+                  targetSdk 35
                   versionCode ${{ steps.meta.outputs.code }}
                   versionName "${{ steps.meta.outputs.version }}"
                   testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -82,7 +81,7 @@ jobs:
 
           dependencies {
               implementation fileTree(dir: 'libs', include: ['*.jar'])
-              implementation 'androidx.appcompat:appcompat:1.6.1'
+              implementation 'androidx.appcompat:appcompat:1.7.0'
               implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
               implementation project(':capacitor-android')
               constraints {
@@ -92,7 +91,7 @@ jobs:
           }
           EOF
 
-          # ২. Layout ফাইলে SwipeRefreshLayout যোগ করা
+          # ২. Layout ফাইলে SwipeRefreshLayout
           cat <<EOF > android/app/src/main/res/layout/activity_main.xml
           <?xml version="1.0" encoding="utf-8"?>
           <androidx.swiperefreshlayout.widget.SwipeRefreshLayout 
@@ -107,7 +106,7 @@ jobs:
           </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
           EOF
 
-          # ৩. MainActivity-তে জাভা কোড ইনজেক্ট করা (Refresh, Back Button, URL Hidden)
+          # ৩. MainActivity জাভা কোড (Refresh + Back + Hidden URL)
           PACKAGE_PATH=$(echo "${{ steps.meta.outputs.package }}" | sed 's/\./\//g')
           FILE_PATH="android/app/src/main/java/$PACKAGE_PATH/MainActivity.java"
           
@@ -123,8 +122,6 @@ jobs:
               @Override
               protected void onCreate(Bundle savedInstanceState) {
                   super.onCreate(savedInstanceState);
-                  
-                  // ইউআরএল লোড করা
                   this.bridge.getWebView().loadUrl("${{ steps.meta.outputs.url }}");
                   
                   swipeRefresh = findViewById(R.id.swipeRefresh);
@@ -146,7 +143,7 @@ jobs:
           EOF
 
           # ৪. পারমিশন আপডেট
-          sed -i '/<\/manifest>/i \    <uses-permission android:name="android.permission.INTERNET" />\n    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />\n    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />\n    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<\/manifest>/i \    <uses-permission android:name="android.permission.INTERNET" />\n    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />\n    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />\n    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="32" />' android/app/src/main/AndroidManifest.xml
 
           npx cap sync android
 
