--- a/.github/workflows/urlTOapk.yml
+++ b/.github/workflows/urlTOapk.yml
@@ -1,4 +1,4 @@
-name: Secure Webview APK with Swipe Refresh
+name: Stable Webview APK with Swipe Refresh
 
 on:
   push:
@@ -52,44 +52,27 @@ jobs:
           EOF
           npx cap add android || true
 
-      - name: Configure Advanced Features & Security
+      - name: Configure Features (Back Button & Swipe Refresh)
         run: |
-          # ১. ডুপ্লিকেট ক্লাস ফিক্স এবং রিফ্রেশ লাইব্রেরি যোগ করা
+          # ১. ডুপ্লিকেট ক্লাস ফিক্স ও SwipeRefresh লাইব্রেরি যুক্ত করা
           sed -i '/dependencies {/a \    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"' android/app/build.gradle
           sed -i '/dependencies {/a \    constraints {\n        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22")\n        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22")\n    }' android/app/build.gradle
 
-          # ২. সিকিউরিটি (Obfuscation) অন করা
-          sed -i 's/minifyEnabled false/minifyEnabled true/' android/app/build.gradle
-          sed -i '/minifyEnabled true/a \            shrinkResources true' android/app/build.gradle
-
-          # ৩. আইকন ও পারমিশন
+          # ২. আইকন জেনারেট
           if [ -f "assets/icon.png" ]; then npx capacitor-assets generate --android; fi
-          sed -i '/android.permission.INTERNET/d' android/app/src/main/AndroidManifest.xml
-          sed -i '/<\/manifest>/i \    <uses-permission android:name="android.permission.INTERNET" />\n    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />\n    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="32" />\n    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />' android/app/src/main/AndroidManifest.xml
 
-          # ৪. XML-এ SwipeRefreshLayout ইনজেক্ট করা
-          # মেইন অ্যাক্টিভিটি লেআউটকে রিফ্রেশ লেআউট দিয়ে মুড়িয়ে দেওয়া
-          cat <<EOF > android/app/src/main/res/layout/activity_main.xml
-          <?xml version="1.0" encoding="utf-8"?>
-          <androidx.swiperefreshlayout.widget.SwipeRefreshLayout 
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/swipeRefresh"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-              <FrameLayout
-                  android:id="@+id/webview_container"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent" />
-          </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-          EOF
+          # ৩. পারমিশন
+          sed -i '/<\/manifest>/i \    <uses-permission android:name="android.permission.INTERNET" />\n    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />\n    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />\n    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />' android/app/src/main/AndroidManifest.xml
 
-          # ৫. MainActivity জাভা কোড মডিফাই করা (Refresh + Back Button)
+          # ৪. MainActivity-তে ব্যাক বাটন ও সোয়াইপ রিফ্রেশ ইনজেক্ট করা
           PACKAGE_PATH=$(echo "${{ steps.meta.outputs.package }}" | sed 's/\./\//g')
           FILE_PATH="android/app/src/main/java/$PACKAGE_PATH/MainActivity.java"
           
+          # ফ্রেশ MainActivity তৈরি
           cat <<EOF > "$FILE_PATH"
           package ${{ steps.meta.outputs.package }};
           import android.os.Bundle;
+          import android.webkit.WebView;
           import androidx.swiperefreshlayout.widget.SwipeRefreshLayout;
           import com.getcapacitor.BridgeActivity;
 
@@ -97,12 +80,22 @@ jobs:
               @Override
               protected void onCreate(Bundle savedInstanceState) {
                   super.onCreate(savedInstanceState);
-                  SwipeRefreshLayout swipeRefresh = findViewById(R.id.swipeRefresh);
-                  swipeRefresh.setOnRefreshListener(() -> {
-                      bridge.getWebView().reload();
-                      swipeRefresh.setRefreshing(false);
+                  
+                  // ১ সেকেন্ড পর পর চেক করবে সোয়াইপ রিফ্রেশ করা হয়েছে কি না
+                  // এটি ডিফল্ট ওয়েবভিউ কন্টেইনারে রিফ্রেশার অ্যাড করবে
+                  final SwipeRefreshLayout swipeRefreshLayout = new SwipeRefreshLayout(this);
+                  swipeRefreshLayout.addView(this.bridge.getWebView());
+                  setContentView(swipeRefreshLayout);
+
+                  swipeRefreshLayout.setOnRefreshListener(new SwipeRefreshLayout.OnRefreshListener() {
+                      @Override
+                      public void onRefresh() {
+                          bridge.getWebView().reload();
+                          swipeRefreshLayout.setRefreshing(false);
+                      }
                   });
               }
+
               @Override
               public void onBackPressed() {
                   if (this.bridge.getWebView().canGoBack()) {
@@ -114,22 +107,19 @@ jobs:
           }
           EOF
 
-          # ৬. ভার্সন ও নাম আপডেট
+          # ৫. ডায়নামিক ভার্সন ও নাম আপডেট
           sed -i "s/versionCode [0-9]*/versionCode ${{ steps.meta.outputs.code }}/" android/app/build.gradle
           sed -i "s/versionName \"[^\"]*\"/versionName \"${{ steps.meta.outputs.version }}\"/" android/app/build.gradle
-          if [ -f "android/app/src/main/res/values/strings.xml" ]; then
-            sed -i "s/\"app_name\">.*<\/string>/\"app_name\">${{ steps.meta.outputs.name }}<\/string>/" android/app/src/main/res/values/strings.xml
-          fi
-
+          
           npx cap sync android
 
-      - name: Build Secured APK
+      - name: Build APK
         run: |
           cd android && chmod +x gradlew
-          ./gradlew assembleRelease
+          ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ steps.meta.outputs.name }}-v${{ steps.meta.outputs.version }}-Secure
-          path: android/app/build/outputs/apk/release/app-release-unsigned.apk
+          name: ${{ steps.meta.outputs.name }}-v${{ steps.meta.outputs.version }}
+          path: android/app/build/outputs/apk/debug/app-debug.apk
